--- a/.github/workflows/Markdown_to_PDF.yml
+++ b/.github/workflows/Markdown_to_PDF.yml
@@ -1,7 +1,8 @@
 name: Convert Markdown to PDF and Commit
 
+# Define the permissions for GITHUB_TOKEN
 permissions:
-  contents: write
+  contents: write  # Grants read and write access to repository contents
 
 on:
   push:
@@ -10,7 +11,7 @@ on:
     paths:
       - 'Deep-Dive.md'
       - '.github/workflows/convert-markdown-to-pdf.yml'
-      - 'scripts/fix_markdown.sh'
+      - 'scripts/fix_markdown.sh'  # Include the fix script in the watch paths
 
 jobs:
   build:
@@ -21,7 +22,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          fetch-depth: 0  # Ensures full history is fetched
 
       # 2. Set Up Git User for Commit
       - name: Set up Git User
@@ -29,26 +30,18 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      # 3. Install Node.js
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-
-      # 4. Install Markdownlint
-      - name: Install Markdownlint
-        run: |
-          npm install -g markdownlint-cli
-
       # 5. Run Markdown Fix Script
       - name: Fix Markdown Formatting
         run: |
+          # Ensure the script is executable
           chmod +x scripts/fix_markdown.sh
+          # Run the script on Deep-Dive.md with backup option
           scripts/fix_markdown.sh -b Deep-Dive.md
 
       # 6. Commit and Push Markdown Fixes (if any)
       - name: Commit and Push Markdown Fixes
         run: |
+          # Check if Deep-Dive.md was modified
           if git diff --quiet Deep-Dive.md; then
             echo "No Markdown fixes needed."
           else
@@ -57,30 +50,21 @@ jobs:
             git push origin main
           fi
 
-      # 7. Cache LaTeX Packages
-      - name: Cache LaTeX Packages
-        uses: actions/cache@v3
-        with:
-          path: /usr/local/texlive
-          key: ${{ runner.os }}-latex
-          restore-keys: |
-            ${{ runner.os }}-latex
-
-      # 8. Install Pandoc and LaTeX Dependencies
-      - name: Install Pandoc and LaTeX
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y pandoc texlive texlive-xetex texlive-latex-extra
-
-      # 9. Convert Markdown to PDF
+      # 7. Convert Markdown to PDF Using Docker
       - name: Convert Markdown to PDF
-        run: |
-          mkdir -p pdf
-          pandoc Deep-Dive.md -o pdf/Deep-Dive.pdf --pdf-engine=xelatex
+        id: convert-to-pdf  # Added ID here
+        uses: addnab/docker-run-action@v3
+        with:
+          image: pandoc/core:2.19  # Pin to a specific version for consistency
+          options: --user ${{ steps.get_ids.outputs.uid }}:${{ steps.get_ids.outputs.gid }}
+          run: |
+            mkdir -p pdf
+            pandoc Deep-Dive.md -o pdf/Deep-Dive.pdf --pdf-engine=xelatex
 
-      # 10. Commit and Push PDF (if changed)
+      # 8. Commit and Push PDF (if changed)
       - name: Commit and Push PDF
         run: |
+          # Check if pdf/Deep-Dive.pdf was modified
           if git diff --quiet pdf/Deep-Dive.pdf; then
             echo "No PDF updates needed."
           else
