--- a/.github/workflows/Markdown_to_PDF.yml
+++ b/.github/workflows/Markdown_to_PDF.yml
@@ -1,3 +1,18 @@
+name: Convert Markdown to PDF and Commit
+
+# Define the permissions for GITHUB_TOKEN
+permissions:
+  contents: write  # Grants read and write access to repository contents
+
+on:
+  push:
+    branches:
+      - main
+    paths:
+      - 'Deep-Dive.md'
+      - '.github/workflows/convert-markdown-to-pdf.yml'
+      - 'scripts/fix_markdown.sh'  # Include the fix script in the watch paths
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -7,7 +22,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          fetch-depth: 0  # Ensures full history is fetched
 
       # 2. Set Up Git User
       - name: Set up Git User
@@ -15,7 +30,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      # 3. Configure GitHub Token
+      # 3. Configure GitHub Token for Pushing
       - name: Configure GitHub Token
         run: |
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
@@ -29,6 +44,7 @@ jobs:
       # 5. Commit and Push Markdown Fixes
       - name: Commit and Push Markdown Fixes
         run: |
+          # Check if Deep-Dive.md was modified
           if git diff --quiet Deep-Dive.md; then
             echo "No Markdown fixes needed."
           else
@@ -54,7 +70,7 @@ jobs:
         id: convert-to-pdf
         uses: addnab/docker-run-action@v3
         with:
-          image: pandoc/latex:latest
+          image: pandoc/latex:latest  # Use an image with LaTeX installed
           options: --user ${{ steps.get_ids.outputs.uid }}:${{ steps.get_ids.outputs.gid }}
           run: |
             echo "Listing workspace contents before conversion:"
@@ -67,6 +83,7 @@ jobs:
       # 9. Commit and Push PDF
       - name: Commit and Push PDF
         run: |
+          # Check if pdf/Deep-Dive.pdf was modified
           if git diff --quiet pdf/Deep-Dive.pdf; then
             echo "No PDF updates needed."
           else
